Atualização do qualificação.html

--- a/curriculo/qualificacao.html
+++ b/curriculo/qualificacao.html
@@ -35,7 +35,8 @@
             </p>
             <h2 class="apresentacao-conteudo-subtitulo">Idiomas</h2><br>
             <p class="apresentacao-conteudo-paragrafo">                 
-                <strong>Inglês Técnico</strong> - Leitura e interpretação de manuais e consultas da internet.<br><br>
+                <strong>Inglês Técnico</strong> - Leitura e interpretação de manuais tecnicos, 
+                consulta de documentação e pesquisas em sites, Wikipédia e fóruns na internet.<br><br>
                 Fazendo curso de <strong>Inglês para DEVs by Alura</strong>.<br><br> 
                                             
             </p>            
