--- a/curriculo/cursos.html
+++ b/curriculo/cursos.html
@@ -36,6 +36,9 @@
                 JavaScript e HTML: Lógica de programação.<br>
                 JavaScript para Web: Crie páginas dinâmicas.<br><br>
                 
+                HTML e CSS: trabalhando com responsividade e publicação de projetos<br>
+                HTML e CSS: Classes, posicionamento e Flexbox<br>
+                HTML e CSS: cabeçalho, footer e variáveis CSS<br>
                 HTML e CSS: ambientes de desenvolvimento, estrutura de arquivos e tags.<br>
                 HTML5 e CSS3 parte 4: avançando no CSS.<br>
                 HTML5 e CSS3 parte 3: trabalhando com formulários e tabelas.<br>
