Adição da guia Projetos e adição de 2 projetos.

--- a/curriculo/qualificacao.html
+++ b/curriculo/qualificacao.html
@@ -14,6 +14,7 @@
         <nav class="cabecalho-menu">
             <a class="cabecalho-menu-link" href="/index.html">Home</a>
             <a class="cabecalho-menu-link" href="/curriculo/qualificacao.html" style="background-color: #616161;">Currículo</a>
+            <a class="cabecalho-menu-link" href="/projetos/projetos.html" >Projetos</a>
             <a class="cabecalho-menu-link" href="/about.html">Sobre mim</a>
         </nav>
         <nav class="cabecalho-menu">
