--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <nav class="cabecalho-menu">
             <a class="cabecalho-menu-link" href="/index.html" style="background-color: #616161;">Home</a>
             <a class="cabecalho-menu-link" href="/curriculo/qualificacao.html" >Currículo</a>
+            <a class="cabecalho-menu-link" href="/projetos/projetos.html" >Projetos</a>
             <a class="cabecalho-menu-link" href="/about.html">Sobre mim</a>
         </nav>       
     </header>
