--- a/projetos/projetos.html
+++ b/projetos/projetos.html
@@ -23,12 +23,16 @@
     <main class="apresentacao">
         <section class="apresentacao-conteudo">
             <h1 class="apresentacao-conteudo-titulo">Projetos dos <strong class="apresentacao-conteudo-titulo-destaque">Cursos Alura</strong></h1>
+            <h2 class="apresentacao-conteudo-subtitulo">Curso Logica de programação</strong></h2><br>
+            <a class="projetos-link" href="/projetos/jogo_adivinha_js.html"> 
+                Projeto JavaScript - Jogo de adivinhação                
+            </a><br> 
             <h2 class="apresentacao-conteudo-subtitulo">Curso Java</strong></h2><br>
             <a class="projetos-link" href="https://gist.github.com/joseonildo/52983d977a817a32ea28a0d9731db4ae"> 
-                Projeto Java - Jogo de adivinhação by IntelliJ IDEA                
+                Projeto Java - Jogo de adivinhação               
             </a><br>
             <a class="projetos-link" href="https://gist.github.com/joseonildo/a336740eaacbb6e9a248ef5cc539cd63">                 
-                Projeto Java - Banco Byte Bank by IntelliJ IDEA
+                Projeto Java - Banco Byte Bank
             </a> 
         </section>        
     </main>
