--- a/projetos/projetos.html
+++ b/projetos/projetos.html
@@ -23,9 +23,9 @@
     <main class="apresentacao">
         <section class="apresentacao-conteudo">
             <h1 class="apresentacao-conteudo-titulo">Projetos dos <strong class="apresentacao-conteudo-titulo-destaque">Cursos Alura</strong></h1>
-            <h2 class="apresentacao-conteudo-subtitulo">Curso Logica de programação</strong></h2><br>
-            <a class="projetos-link" href="/projetos/jogo_adivinha_js.html"> 
-                Projeto JavaScript - Jogo de adivinhação                
+            <h2 class="apresentacao-conteudo-subtitulo">Curso de Logica de programação com JS, HTML e CSS</h2><br>
+            <a class="projetos-link" href="/projetos/jogo_adivinha_basico.html"> 
+                Jogo "Adivinhe o número sorteado" - Basico (Apenas Alerts e Prompts)               
             </a><br> 
             <h2 class="apresentacao-conteudo-subtitulo">Curso Java</strong></h2><br>
             <a class="projetos-link" href="https://gist.github.com/joseonildo/52983d977a817a32ea28a0d9731db4ae"> 
