--- a/projetos/jogo_adivinha_basico.html
+++ b/projetos/jogo_adivinha_basico.html
@@ -12,8 +12,8 @@
         </nav>       
     </header>                  
     <main class="apresentacao">
-        <section class="apresentacao-conteudo">
-            <br>
+        <section class="apresentacao-conteudo"><br>
+            
     <h1> Jogo: "Adivinhe o número sorteado"</h1><br>    
     <h3> Histórico do jogo:</h3><br>
     
