--- a/projetos/projetos.html
+++ b/projetos/projetos.html
@@ -24,9 +24,19 @@
         <section class="apresentacao-conteudo">
             <h1 class="apresentacao-conteudo-titulo">Projetos dos <strong class="apresentacao-conteudo-titulo-destaque">Cursos Alura</strong></h1>
             <h2 class="apresentacao-conteudo-subtitulo">Curso de Logica de programação com JS, HTML e CSS</h2><br>
+            <a class="projetos-link" href="/projetos/app_ano_das_copas.html"> 
+                App "Ano das copas" - Apenas Alerts e Prompts (Antigo)               
+            </a> 
             <a class="projetos-link" href="/projetos/jogo_adivinha_basico.html"> 
-                Jogo "Adivinhe o número sorteado" - Basico (Apenas Alerts e Prompts)               
+                Jogo "Adivinhe o número sorteado" - Apenas Alerts e Prompts (Atualizado)              
+            </a> 
+            <a class="projetos-link" href="/projetos/jogo_adivinha_plus.html"> 
+                Jogo "Adivinhe o número sorteado - Plus" HTML + Botões (Antigo)              
+            </a>
+            <a class="projetos-link" href="/projetos/jogo_mega_sena.html"> 
+                Jogo "Mega Sena" - HTML + Botões - (Antigo)              
             </a><br> 
+
             <h2 class="apresentacao-conteudo-subtitulo">Curso Java</strong></h2><br>
             <a class="projetos-link" href="https://gist.github.com/joseonildo/52983d977a817a32ea28a0d9731db4ae"> 
                 Projeto Java - Jogo de adivinhação               
