--- a/projetos/projetos.html
+++ b/projetos/projetos.html
@@ -31,7 +31,7 @@
                 Jogo "Adivinhe o número sorteado" - Apenas Alerts e Prompts (Atualizado)              
             </a> 
             <a class="projetos-link" href="/projetos/jogo_adivinha_plus.html"> 
-                Jogo "Adivinhe o número sorteado - Plus" HTML + Botões (Antigo)              
+                Jogo "Adivinhe o número sorteado+" - HTML + Botões (Antigo)              
             </a>
             <a class="projetos-link" href="/projetos/jogo_mega_sena.html"> 
                 Jogo "Mega Sena" - HTML + Botões - (Antigo)              
