--- a/projetos/projetos.html
+++ b/projetos/projetos.html
@@ -23,6 +23,11 @@
     <main class="apresentacao">
         <section class="apresentacao-conteudo">
             <h1 class="apresentacao-conteudo-titulo">Projetos dos <strong class="apresentacao-conteudo-titulo-destaque">Cursos Alura</strong></h1>
+           <h2 class="apresentacao-conteudo-subtitulo">Imersões Alura</strong></h2><br>
+            <a class="projetos-link" href="https://codepen.io/joseodf"> 
+                Imersão Dev 6ª e 7ª Edição - Projetos CodePen               
+            </a><br> 
+           
             <h2 class="apresentacao-conteudo-subtitulo">Curso de Logica de programação com JS, HTML e CSS</h2><br>
             <a class="projetos-link" href="/projetos/app_ano_das_copas.html"> 
                 App "Ano das copas" - Apenas Alerts e Prompts (Antigo)               
