Update Projetos e cursos

--- a/curriculo/cursos.html
+++ b/curriculo/cursos.html
@@ -30,6 +30,11 @@
             <h1 class="apresentacao-conteudo-titulo">Cursos</h1>
             <h2 class="apresentacao-conteudo-subtitulo">Programação - Alura</strong></h2><br>
             <p class="apresentacao-conteudo-paragrafo"> 
+                
+                Arduino: do zero ao jogo.<br>
+                Arduino e Robótica: Programando um braço robô.<br>                
+                NodeMcu e Esp8266: Medindo e publicando dados com MQTT.<br><br>
+
                 Java Polimorfismo: Herança e interfaces.<br>
                 Java OO: Orientação a Objetos.<br>
                 Java JRE e JDK: Compile e execute o seu programa.<br><br>               
