Atualização dos cursos

--- a/projetos/projetos.html
+++ b/projetos/projetos.html
@@ -23,8 +23,12 @@
     <main class="apresentacao">
         <section class="apresentacao-conteudo">
             <h1 class="apresentacao-conteudo-titulo">Projetos dos <strong class="apresentacao-conteudo-titulo-destaque">Cursos Alura</strong></h1>
-            <h2 class="apresentacao-conteudo-subtitulo">Arduino e IOT</strong></h2><br>
+            <h2 class="apresentacao-conteudo-subtitulo">IOT - Robotica e Internet das coisas</strong></h2><br>
 
+            <a class="projetos-link" href="https://cursos.alura.com.br/forum/topico-projeto-final-esp32-detector-de-presenca-ble-com-display-oled-e-mqtt-456357">                  
+                Esp32: detector de presença com Bluetooth Low Energy
+            </a><br>
+            
             <a class="projetos-link" href="https://cursos.alura.com.br/forum/topico-projeto-final-esp8266-sensor-de-temperatura-e-humidade-com-display-oled-e-mqtt-450863">                  
                 NodeMcu e Esp8266: medindo sensores e publicando dados com MQTT
             </a><br>
