--- a/curriculo/cursos.html
+++ b/curriculo/cursos.html
@@ -31,9 +31,10 @@
             <h2 class="apresentacao-conteudo-subtitulo">Programação - Alura</strong></h2><br>
             <p class="apresentacao-conteudo-paragrafo"> 
                 
-                Arduino: do zero ao jogo.<br>
-                Arduino e Robótica: Programando um braço robô.<br>                
-                NodeMcu e Esp8266: Medindo e publicando dados com MQTT.<br><br>
+                Esp32: detector de presença com Bluetooth Low Energy.<br>
+                NodeMcu e Esp8266: Medindo e publicando dados com MQTT.<br>
+                Arduino e Robótica: Programando um braço robô.<br> 
+                Arduino: do zero ao jogo.<br><br>
 
                 Java Polimorfismo: Herança e interfaces.<br>
                 Java OO: Orientação a Objetos.<br>
@@ -47,9 +48,9 @@
                 HTML5 e CSS3 parte 3: trabalhando com formulários e tabelas.<br>
                 HTML5 e CSS3 parte 2: posicionamento, listas e navegação.<br>
                 HTML5 e CSS3 parte 1: crie uma página da Web.<br><br>
-
-                JavaScript e HTML: Lógica de programação.<br>
+                
                 JavaScript para Web: Crie páginas dinâmicas.<br><br>
+                JavaScript e HTML: Lógica de programação.<br>
 
                 Lógica de programação: laços e listas com JavaScript.<br>
                 Lógica de programação: comece em lógica com o jogo Pong e JavaScript.<br><br>
